# zhymabekroman.github.io

./: 404.html  _zhymabekroman.github.io.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: page-build.yml
_docs/: index.html
about/: index.html
css/: custom.css
docs/: _docs.md  index.md  old_index.md
docs/css/: custom-headers.css
docs/posts/: custom-telegram-client-api-credits.md  email-dating-relationship-scam.md  finding-a-scammer.md  making-backup-of-github-to-yandex-disk.md  making_backup_of_github_to_yandex_disk.md  message-from-sts.gov.kz.md  must-have-applications.md  must-have-browser-extensions.md  my-experience-of-taking-medications.md  my-portable-pc-build.md  transcribe-trial-reset.md  ui-design_the-bad-and-the-good.md  whatsapp-api.md  whatsapp_api.md
docs/templates/: post.html  posts_list.html
javascripts/: yandex_metrika.js
old_index/: index.html
posts/custom-telegram-client-api-credits/: index.html
posts/email-dating-relationship-scam/: index.html
posts/finding-a-scammer/: index.html
posts/making-backup-of-github-to-yandex-disk/: index.html
posts/making_backup_of_github_to_yandex_disk/: index.html
posts/message-from-sts.gov.kz/: index.html
posts/must-have-applications/: index.html
posts/must-have-browser-extensions/: index.html
posts/my-experience-of-taking-medications/: index.html
posts/my-portable-pc-build/: index.html
posts/whatsapp-api/: index.html
search/: search_index.json
(+2 files in other folders)
