[tool.poetry]
name = "zhymabekroman-github-io"
version = "0.1.0"
description = ""
authors = ["ZhymabekRoman <robanokssamit@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocs-material-extensions = "^1.3.1"
mkdocs-redirects = "^1.2.2"
mkdocs-obsidian-bridge = "^1.1.1"
mkdocs-annotations = {git = "https://github.com/ZhymabekRoman/obsidian-enhanced-anotations.git", subdirectory = "mkdocs-annotations/"}
mkdocs-rss-plugin = "^1.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
